--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "express": "4.18.2",
     "@google/genai": "^1.16.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
